--- a/public/css/global.css
+++ b/public/css/global.css
@@ -378,16 +378,21 @@ p.photo-description {
 }
 
 /* line 154, ../sass/global.scss */
+.pull-right ul.pagination {
+  margin: 0;
+}
+
+/* line 158, ../sass/global.scss */
 .progress {
   margin: 10px 0;
 }
 
-/* line 159, ../sass/global.scss */
+/* line 163, ../sass/global.scss */
 .panel-footer .form-group {
   margin-bottom: 0;
 }
 
-/* line 164, ../sass/global.scss */
+/* line 168, ../sass/global.scss */
 footer {
   position: relative;
   padding: 10px 10px 15px;
@@ -397,42 +402,42 @@ footer {
   margin: 0 auto;
   width: 50%;
 }
-/* line 167, ../sass/global.scss */
+/* line 171, ../sass/global.scss */
 footer img {
   margin-left: 13px;
 }
-/* line 168, ../sass/global.scss */
+/* line 172, ../sass/global.scss */
 footer a {
   margin-left: 13px;
 }
 
-/* line 173, ../sass/global.scss */
+/* line 177, ../sass/global.scss */
 .album {
   padding: 5px 15px 5px 5px;
   border: 0;
   height: 162px;
   position: relative;
 }
-/* line 177, ../sass/global.scss */
+/* line 181, ../sass/global.scss */
 .album .photo {
   position: absolute;
   z-index: 10;
 }
-/* line 178, ../sass/global.scss */
+/* line 182, ../sass/global.scss */
 .album .description {
   position: absolute;
   z-index: 1;
   padding: 10px 5px 10px 230px;
 }
 
-/* line 181, ../sass/global.scss */
+/* line 185, ../sass/global.scss */
 .photo, .photo-large {
   float: left;
   padding: 5px;
   border: 0;
   text-align: center;
 }
-/* line 184, ../sass/global.scss */
+/* line 188, ../sass/global.scss */
 .photo a.thumb, .photo-large a.thumb {
   display: block;
   background: #888;
@@ -441,125 +446,125 @@ footer a {
   text-decoration: none;
   padding: 5px;
 }
-/* line 187, ../sass/global.scss */
+/* line 191, ../sass/global.scss */
 .photo a.thumb:hover, .photo-large a.thumb:hover {
   background: #999;
   border: 1px solid #444;
 }
-/* line 189, ../sass/global.scss */
+/* line 193, ../sass/global.scss */
 .photo.large, .photo-large.large {
   float: none;
 }
 
-/* line 191, ../sass/global.scss */
+/* line 195, ../sass/global.scss */
 .photo {
   width: 222px;
   height: 172px;
 }
 
-/* line 197, ../sass/global.scss */
+/* line 201, ../sass/global.scss */
 table.table td.icon {
   padding: 6px 0 0;
   text-align: center;
   vertical-align: middle;
 }
-/* line 202, ../sass/global.scss */
+/* line 206, ../sass/global.scss */
 table.table td.icon.wide {
   padding: 4px 0;
 }
-/* line 206, ../sass/global.scss */
+/* line 210, ../sass/global.scss */
 table.table td.forum {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 210, ../sass/global.scss */
+/* line 214, ../sass/global.scss */
 table.table td.forum a {
   font-weight: bold;
 }
-/* line 214, ../sass/global.scss */
+/* line 218, ../sass/global.scss */
 table.table td.topic {
   padding: 6px;
 }
-/* line 217, ../sass/global.scss */
+/* line 221, ../sass/global.scss */
 table.table td.topic .thread_preview {
   width: 100%;
   height: 1.2em;
   overflow: hidden;
 }
-/* line 223, ../sass/global.scss */
+/* line 227, ../sass/global.scss */
 table.table td.lastpost {
   padding: 6px;
   vertical-align: middle;
 }
-/* line 227, ../sass/global.scss */
+/* line 231, ../sass/global.scss */
 table.table td.lastpost a {
   font-weight: bold;
 }
-/* line 228, ../sass/global.scss */
+/* line 232, ../sass/global.scss */
 table.table td.lastpost div a {
   font-weight: normal;
 }
-/* line 229, ../sass/global.scss */
+/* line 233, ../sass/global.scss */
 table.table td.lastpost.topic {
   text-align: right;
   font-size: 10pt;
 }
-/* line 230, ../sass/global.scss */
+/* line 234, ../sass/global.scss */
 table.table td.lastpost.message {
   font-size: 10pt;
   color: #999;
 }
-/* line 232, ../sass/global.scss */
+/* line 236, ../sass/global.scss */
 table.table td.score {
   padding: 4px 0;
 }
-/* line 233, ../sass/global.scss */
+/* line 237, ../sass/global.scss */
 table.table td.ending {
   font-size: 10pt;
 }
-/* line 234, ../sass/global.scss */
+/* line 238, ../sass/global.scss */
 table.table td.date {
   font-size: 10pt;
   text-align: center;
 }
-/* line 235, ../sass/global.scss */
+/* line 239, ../sass/global.scss */
 table.table td.posts {
   font-size: 10pt;
   text-align: center;
   color: #aaa;
 }
-/* line 238, ../sass/global.scss */
+/* line 242, ../sass/global.scss */
 table.table th.date, table.table th.posts {
   text-align: center;
 }
-/* line 245, ../sass/global.scss */
+/* line 249, ../sass/global.scss */
 table.table tr.unread td.topic a, table.table tr.unread td.from a {
   font-weight: bold;
 }
-/* line 250, ../sass/global.scss */
+/* line 254, ../sass/global.scss */
 table.table tr.selected td {
   background: #555 !important;
 }
-/* line 252, ../sass/global.scss */
+/* line 256, ../sass/global.scss */
 table.table .tiny {
   font-size: 9pt;
   color: #000 !important;
   font-weight: normal !important;
 }
-/* line 254, ../sass/global.scss */
+/* line 258, ../sass/global.scss */
 table.table th.icon, table.table td.icon {
   width: 50px;
 }
-/* line 255, ../sass/global.scss */
+/* line 259, ../sass/global.scss */
 table.table th.icon.wide, table.table td.icon.wide {
   width: 55px;
 }
-/* line 257, ../sass/global.scss */
+/* line 261, ../sass/global.scss */
 table.table .posts {
   width: 80px;
 }
 
-/* line 259, ../sass/global.scss */
+/* line 263, ../sass/global.scss */
 .smileys {
   border: 1px solid #888;
   padding: 6px;
@@ -569,25 +574,25 @@ table.table .posts {
   font-size: 10pt;
 }
 
-/* line 263, ../sass/global.scss */
+/* line 267, ../sass/global.scss */
 .emote {
   padding: 4px 6px 2px 6px;
   float: left;
   border: 1px solid #666;
   background: #666;
 }
-/* line 266, ../sass/global.scss */
+/* line 270, ../sass/global.scss */
 .emote:hover {
   background: #5f5f5f;
   border: 1px solid #333;
 }
-/* line 267, ../sass/global.scss */
+/* line 271, ../sass/global.scss */
 .emote:active {
   background: #444;
   border: 1px solid #222;
 }
 
-/* line 270, ../sass/global.scss */
+/* line 274, ../sass/global.scss */
 .bbsep {
   margin: 0;
   padding: 0;
@@ -597,7 +602,7 @@ table.table .posts {
   background: url("images/bbcode/separator.gif") center no-repeat;
 }
 
-/* line 274, ../sass/global.scss */
+/* line 278, ../sass/global.scss */
 .bbcode, .bbsel, .bbhov {
   padding: 0;
   float: left;
@@ -605,25 +610,25 @@ table.table .posts {
   height: 22px;
 }
 
-/* line 277, ../sass/global.scss */
+/* line 281, ../sass/global.scss */
 .bbcode {
   border: 1px solid #efefef;
   background-color: #eee;
 }
 
-/* line 280, ../sass/global.scss */
+/* line 284, ../sass/global.scss */
 .bbhov, .bbcode:hover {
   background-color: #c1d2ee;
   border: 1px solid #316ac5;
 }
 
-/* line 283, ../sass/global.scss */
+/* line 287, ../sass/global.scss */
 .bbsel, .bbcode:active {
   background-color: #98b5e2;
   border: 1px solid #316ac5;
 }
 
-/* line 286, ../sass/global.scss */
+/* line 290, ../sass/global.scss */
 .colorbox {
   padding: 3px;
   position: absolute;
@@ -634,7 +639,7 @@ table.table .posts {
   border: 1px solid #0b198c;
 }
 
-/* line 295, ../sass/global.scss */
+/* line 299, ../sass/global.scss */
 .bbcolor {
   float: left;
   margin: 0;
@@ -644,25 +649,25 @@ table.table .posts {
   cursor: default;
   color: #000;
 }
-/* line 298, ../sass/global.scss */
+/* line 302, ../sass/global.scss */
 .bbcolor:hover {
   background: #c1d2ee;
   border: 1px solid #316ac5;
   color: #316ac5;
 }
 
-/* line 301, ../sass/global.scss */
+/* line 305, ../sass/global.scss */
 table.calendar {
   padding: 0;
   border-collapse: collapse;
 }
-/* line 303, ../sass/global.scss */
+/* line 307, ../sass/global.scss */
 table.calendar th {
   text-align: center;
   width: 14%;
   color: #ccc;
 }
-/* line 304, ../sass/global.scss */
+/* line 308, ../sass/global.scss */
 table.calendar td.day {
   width: 14%;
   height: 85px;
@@ -672,31 +677,31 @@ table.calendar td.day {
   padding: 4px;
   font-size: 8pt;
 }
-/* line 307, ../sass/global.scss */
+/* line 311, ../sass/global.scss */
 table.calendar td.day.has-events {
   border: 2px solid #000;
   background: #7f7f7f;
 }
-/* line 308, ../sass/global.scss */
+/* line 312, ../sass/global.scss */
 table.calendar td.day.today {
   border: 2px solid #000;
 }
-/* line 309, ../sass/global.scss */
+/* line 313, ../sass/global.scss */
 table.calendar td.day.today.has-events {
   background: #999;
 }
 
-/* line 314, ../sass/global.scss */
+/* line 318, ../sass/global.scss */
 .shoutbox {
   padding: 0;
   font-size: 10pt;
 }
-/* line 317, ../sass/global.scss */
+/* line 321, ../sass/global.scss */
 .shoutbox a.at_reply {
   color: #ccc;
   text-decoration: none;
 }
-/* line 321, ../sass/global.scss */
+/* line 325, ../sass/global.scss */
 .shoutbox table.shouts th.date {
   background: #444;
   color: #eee;
@@ -706,13 +711,13 @@ table.calendar td.day.today.has-events {
   border-top: 1px solid #333;
   border-bottom: 1px solid #333;
 }
-/* line 325, ../sass/global.scss */
+/* line 329, ../sass/global.scss */
 .shoutbox table.shouts td {
   background: #666;
   padding: 3px 8px;
 }
 
-/* line 329, ../sass/global.scss */
+/* line 333, ../sass/global.scss */
 .attachment-box {
   margin: 15px 0 0;
   padding: 8px 0;
@@ -720,27 +725,27 @@ table.calendar td.day.today.has-events {
   border-bottom: 1px solid #999;
 }
 
-/* line 333, ../sass/global.scss */
+/* line 337, ../sass/global.scss */
 .form-box {
   padding: 8px 0;
   border-bottom: 1px solid #999;
 }
 
-/* line 336, ../sass/global.scss */
+/* line 340, ../sass/global.scss */
 fieldset {
   border: 1px grooved #ccc;
   margin-bottom: 6px;
   padding: 6px 10px 10px;
 }
 
-/* line 337, ../sass/global.scss */
+/* line 341, ../sass/global.scss */
 legend {
   background: #666;
   padding: 0 10px;
   color: #333;
 }
 
-/* line 339, ../sass/global.scss */
+/* line 343, ../sass/global.scss */
 .userbox {
   padding: 0;
   position: absolute;
@@ -750,7 +755,7 @@ legend {
   background: #666;
   border: 1px solid #333;
 }
-/* line 343, ../sass/global.scss */
+/* line 347, ../sass/global.scss */
 .userbox a {
   display: block;
   width: 178px;
@@ -760,13 +765,13 @@ legend {
   border: 1px solid #666;
   color: #ddd;
 }
-/* line 346, ../sass/global.scss */
+/* line 350, ../sass/global.scss */
 .userbox a:hover {
   background: #888;
   border: 1px solid #333;
   color: #fff;
 }
-/* line 348, ../sass/global.scss */
+/* line 352, ../sass/global.scss */
 .userbox hr {
   width: 80%;
   border: 0;
@@ -775,7 +780,7 @@ legend {
   background: #ccc;
 }
 
-/* line 353, ../sass/global.scss */
+/* line 357, ../sass/global.scss */
 .usermenu, .userhov, .usersel {
   padding: 3px 10px;
   height: 28px;
@@ -788,24 +793,24 @@ legend {
   z-index: 10;
 }
 
-/* line 357, ../sass/global.scss */
+/* line 361, ../sass/global.scss */
 .usermenu {
   border: 1px solid #666;
 }
 
-/* line 358, ../sass/global.scss */
+/* line 362, ../sass/global.scss */
 .userhov, .usermenu:hover {
   background: #888;
   border: 1px solid #333;
 }
 
-/* line 359, ../sass/global.scss */
+/* line 363, ../sass/global.scss */
 .usersel, .usermenu:active {
   background: #666;
   border: 1px solid #333;
 }
 
-/* line 361, ../sass/global.scss */
+/* line 365, ../sass/global.scss */
 .jumpbox {
   border: 2px solid #333;
   background: #666;
@@ -814,7 +819,7 @@ legend {
   color: #000;
 }
 
-/* line 365, ../sass/global.scss */
+/* line 369, ../sass/global.scss */
 a.scaled {
   text-decoration: none;
   display: block;
@@ -825,32 +830,32 @@ a.scaled {
   font-size: 10pt;
 }
 
-/* line 370, ../sass/global.scss */
+/* line 374, ../sass/global.scss */
 .quote {
   margin: 5px 0 5px 20px;
   border: 1px solid #333;
   background: #777;
   padding: 0;
 }
-/* line 372, ../sass/global.scss */
+/* line 376, ../sass/global.scss */
 .quote .author {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #333;
   background: #555;
 }
-/* line 374, ../sass/global.scss */
+/* line 378, ../sass/global.scss */
 .quote .author img {
   margin-left: 10px;
   vertical-align: middle;
 }
-/* line 376, ../sass/global.scss */
+/* line 380, ../sass/global.scss */
 .quote .content {
   margin: 0;
   padding: 5px 15px 5px 5px;
 }
 
-/* line 379, ../sass/global.scss */
+/* line 383, ../sass/global.scss */
 .spoiler-alert {
   color: #900;
   background: #777;
@@ -859,13 +864,13 @@ a.scaled {
   text-decoration: none;
   padding: 2px 5px;
 }
-/* line 382, ../sass/global.scss */
+/* line 386, ../sass/global.scss */
 .spoiler-alert:hover {
   color: #060;
   border: 2px dashed #060;
 }
 
-/* line 384, ../sass/global.scss */
+/* line 388, ../sass/global.scss */
 .spoiler {
   display: none;
   border: 2px dashed #900;
@@ -873,7 +878,7 @@ a.scaled {
   padding: 5px;
 }
 
-/* line 388, ../sass/global.scss */
+/* line 392, ../sass/global.scss */
 pre.code {
   font-size: 10pt;
   font-family: "Courier New",mono;
@@ -886,18 +891,18 @@ pre.code {
   overflow-x: auto;
 }
 
-/* line 394, ../sass/global.scss */
+/* line 398, ../sass/global.scss */
 .sig {
   border-top: 1px dotted #ccc;
   color: #ccc;
   font-size: 10pt;
 }
-/* line 398, ../sass/global.scss */
+/* line 402, ../sass/global.scss */
 .sig object {
   display: none;
 }
 
-/* line 401, ../sass/global.scss */
+/* line 405, ../sass/global.scss */
 .thumbnail-selector {
   float: left;
   width: 500px;
@@ -910,26 +915,26 @@ pre.code {
   line-height: 0;
   padding: 10px 5px;
 }
-/* line 404, ../sass/global.scss */
+/* line 408, ../sass/global.scss */
 .thumbnail-selector .thumbnail {
   margin: 0 3px;
   height: 150px;
   display: inline-block;
 }
-/* line 406, ../sass/global.scss */
+/* line 410, ../sass/global.scss */
 .thumbnail-selector .thumbnail div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 408, ../sass/global.scss */
+/* line 412, ../sass/global.scss */
 .thumbnail-selector .thumbnail div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
 
-/* line 413, ../sass/global.scss */
+/* line 417, ../sass/global.scss */
 #menu-button {
   display: block;
   background: #5f5f5f;
@@ -939,136 +944,136 @@ pre.code {
   float: left;
 }
 
-/* line 421, ../sass/global.scss */
+/* line 425, ../sass/global.scss */
 #mobile-menu {
   margin-bottom: 10px;
   font-size: 12pt;
 }
-/* line 424, ../sass/global.scss */
+/* line 428, ../sass/global.scss */
 #mobile-menu a {
   display: block;
   padding: 4px 0;
 }
-/* line 428, ../sass/global.scss */
+/* line 432, ../sass/global.scss */
 #mobile-menu #sub-menu {
   margin-left: 20px;
 }
-/* line 430, ../sass/global.scss */
+/* line 434, ../sass/global.scss */
 #mobile-menu #sub-menu a {
   display: block;
 }
 
-/* line 435, ../sass/global.scss */
+/* line 439, ../sass/global.scss */
 #quick-links {
   float: right;
   margin-top: -10px;
 }
 
-/* line 441, ../sass/global.scss */
+/* line 445, ../sass/global.scss */
 body.mobile h2 {
   font-size: 16pt;
   font-variant: small-caps;
   margin: 2px 0 4px 0;
 }
-/* line 443, ../sass/global.scss */
+/* line 447, ../sass/global.scss */
 body.mobile h2 a {
   color: #fff;
   text-decoration: none;
 }
-/* line 447, ../sass/global.scss */
+/* line 451, ../sass/global.scss */
 body.mobile .table th.icon, body.mobile .table td.icon {
   width: 30px;
 }
-/* line 448, ../sass/global.scss */
+/* line 452, ../sass/global.scss */
 body.mobile .table th.icon.wide, body.mobile .table td.icon.wide {
   width: 35px;
 }
-/* line 451, ../sass/global.scss */
+/* line 455, ../sass/global.scss */
 body.mobile .album {
   width: 100%;
   height: 97px;
 }
-/* line 453, ../sass/global.scss */
+/* line 457, ../sass/global.scss */
 body.mobile .album .photo {
   width: 122px;
   height: 97px;
 }
-/* line 455, ../sass/global.scss */
+/* line 459, ../sass/global.scss */
 body.mobile .album .photo img {
   max-width: 100px;
   max-height: 75px;
 }
-/* line 457, ../sass/global.scss */
+/* line 461, ../sass/global.scss */
 body.mobile .album .description {
   padding-left: 130px;
 }
-/* line 460, ../sass/global.scss */
+/* line 464, ../sass/global.scss */
 body.mobile footer {
   border-left: 0;
   border-right: 0;
   width: 100%;
   top: 0;
 }
-/* line 463, ../sass/global.scss */
+/* line 467, ../sass/global.scss */
 body.mobile footer #social-media {
   float: none;
   margin: 0 0 10px;
 }
-/* line 465, ../sass/global.scss */
+/* line 469, ../sass/global.scss */
 body.mobile footer #social-media img {
   margin: 0;
 }
-/* line 466, ../sass/global.scss */
+/* line 470, ../sass/global.scss */
 body.mobile footer #social-media a {
   margin: 0 3px;
 }
-/* line 470, ../sass/global.scss */
+/* line 474, ../sass/global.scss */
 body.mobile div.scaled {
   display: none;
 }
-/* line 471, ../sass/global.scss */
+/* line 475, ../sass/global.scss */
 body.mobile img.post-image {
   max-width: 100%;
   height: auto;
 }
 
 @media print {
-  /* line 475, ../sass/global.scss */
+  /* line 479, ../sass/global.scss */
   a {
     color: #369 !important;
     text-decoration: none;
   }
 
-  /* line 476, ../sass/global.scss */
+  /* line 480, ../sass/global.scss */
   nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
     display: none;
   }
 
-  /* line 479, ../sass/global.scss */
+  /* line 483, ../sass/global.scss */
   header {
     height: auto;
   }
 
-  /* line 480, ../sass/global.scss */
+  /* line 484, ../sass/global.scss */
   footer {
     top: 0;
   }
 
-  /* line 482, ../sass/global.scss */
+  /* line 486, ../sass/global.scss */
   .welcome .table-header {
     border-top: 1px solid #000;
   }
-  /* line 483, ../sass/global.scss */
+  /* line 487, ../sass/global.scss */
   .welcome .header {
     color: #000;
   }
 
-  /* line 486, ../sass/global.scss */
+  /* line 490, ../sass/global.scss */
   table.table2 th {
     color: #000;
   }
 
-  /* line 488, ../sass/global.scss */
+  /* line 492, ../sass/global.scss */
   img {
     max-width: 100%;
     height: auto;
